<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="albania">Albania</string>
    <string name="app_name">EuroNote</string>
    <string name="armenia">Armenia</string>
    <string name="australia">Australia</string>
    <string name="austria">Austria</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="belarus">Belarus</string>
    <string name="belgium">Belgium</string>
    <string name="croatia">Croatia</string>
    <string name="cyprus">Cyprus</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="denmark">Denmark</string>
    <string name="estonia">Estonia</string>
    <string name="finland">Finland</string>
    <string name="france">France</string>
    <string name="georgia">Georgia</string>
    <string name="germany">Germany</string>
    <string name="greece">Greece</string>
    <string name="hungary">Hungary</string>
    <string name="iceland">Iceland</string>
    <string name="ireland">Ireland</string>
    <string name="israel">Israel</string>
    <string name="italy">Italy</string>
    <string name="latvia">Latvia</string>
    <string name="lithuania">Lithuania</string>
    <string name="malta">Malta</string>
    <string name="moldova">Moldova</string>
    <string name="montenegro">Montenegro</string>
    <string name="netherlands">The Netherlands</string>
    <string name="north_macedonia">North Macedonia</string>
    <string name="norway">Norway</string>
    <string name="poland">Poland</string>
    <string name="portugal">Portugal</string>
    <string name="romania">Romania</string>
    <string name="russia">Russia</string>
    <string name="san_marino">San Marino</string>
    <string name="serbia">Serbia</string>
    <string name="slovenia">Slovenia</string>
    <string name="spain">Spain</string>
    <string name="sweden">Sweden</string>
    <string name="switzerland">Switzerland</string>
    <string name="uk">United Kingdom</string>
    <string name="grand_final">GRAND FINAL</string>
    <string name="first_semifinal">FIRST SEMIFINAL</string>
    <string name="second_semifinal">SECOND SEMIFINAL</string>
    <string name="all">ALL</string>
    <string name="faves">YOUR FAVOURITES</string>
    <string name="big_five">BIG FIVE</string>
    <string name="winner_2018">2018 WINNER</string>
</resources>