<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/all"
        android:enabled="true"
        android:icon="@drawable/ic_all"
        android:iconTint="@color/white"
        android:title="@string/all"/>
    <item
        android:id="@+id/first_semifinal"
        android:enabled="true"
        android:icon="@drawable/ic_first_semifinal"
        android:iconTint="@color/white"
        android:title="@string/first_semifinal"/>
    <item
        android:id="@+id/second_semifinal"
        android:enabled="true"
        android:icon="@drawable/ic_second_semifinal"
        android:title="@string/second_semifinal"/>
    <item
        android:id="@+id/grand_final"
        android:enabled="true"
        android:icon="@drawable/ic_grand_final"
        android:title="@string/grand_final"/>
    <item
        android:id="@+id/faves"
        android:enabled="true"
        android:icon="@drawable/ic_faves"
        android:title="@string/faves"/>
</menu>